// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`member basic ast: ast 1`] = `
Object {
  "base": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "req",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "member": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "name": "backend",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "trailingComments": Array [],
  "type": "Member",
}
`;

exports[`member basic format: format 1`] = `req.backend`;

exports[`member basic token 1`] = `
Array [
  req,
  .,
  backend,
]
`;

exports[`member deep ast: ast 1`] = `
Object {
  "base": Object {
    "base": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 1,
          "offset": 2,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "name": "req",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "member": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": Object {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
      },
      "name": "http",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "trailingComments": Array [],
    "type": "Member",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "member": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "name": "Debug",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "trailingComments": Array [],
  "type": "Member",
}
`;

exports[`member deep format: format long 1`] = `req.http.Debug`;

exports[`member deep format: format short 1`] = `
req
  .http
  .Debug
`;

exports[`member deep token 1`] = `
Array [
  req,
  .,
  http,
  .,
  Debug,
]
`;

exports[`member deep_in_binary_expression ast: ast 1`] = `
Object {
  "innerComments": Array [],
  "leadingComments": Array [],
  "left": Object {
    "base": Object {
      "base": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "name": "req",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "member": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "name": "http",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "trailingComments": Array [],
      "type": "Member",
    },
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "member": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
      },
      "name": "Debug",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "trailingComments": Array [],
    "type": "Member",
  },
  "loc": Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "operator": "==",
  "right": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 25,
        "line": 1,
        "offset": 24,
      },
      "start": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
    },
    "trailingComments": Array [],
    "type": "StringLiteral",
    "value": "\\"debug\\"",
  },
  "trailingComments": Array [],
  "type": "BinaryExpression",
}
`;

exports[`member deep_in_binary_expression format: format long 1`] = `req.http.Debug == "debug"`;

exports[`member deep_in_binary_expression format: format short 1`] = `
req
  .http
  .Debug ==
  "debug"
`;

exports[`member deep_in_binary_expression token 1`] = `
Array [
  req,
  .,
  http,
  .,
  Debug,
  ==,
  "debug",
]
`;

exports[`member in_binary_expression ast: ast 1`] = `
Object {
  "innerComments": Array [],
  "leadingComments": Array [],
  "left": Object {
    "base": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 1,
          "offset": 2,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "name": "req",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "member": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": Object {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
      },
      "name": "backend",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "trailingComments": Array [],
    "type": "Member",
  },
  "loc": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "operator": "==",
  "right": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "start": Object {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
    },
    "name": "backend",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "trailingComments": Array [],
  "type": "BinaryExpression",
}
`;

exports[`member in_binary_expression format: format long 1`] = `req.backend == backend`;

exports[`member in_binary_expression format: format short 1`] = `
req.backend ==
  backend
`;

exports[`member in_binary_expression token 1`] = `
Array [
  req,
  .,
  backend,
  ==,
  backend,
]
`;
